--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: 
       name: Python enviroment
+    env: 
+      TELEGRAM_BOT_API: ${{ secrets.TELEGRAM_BOT_API }}
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.12
