--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,7 +13,7 @@ permissions:
   contents: read
 
 jobs:
-  deployment:
+  build:
     runs-on: ubuntu-latest
     environment: 
       name: Python enviroment
