ренейм + перенос в .env токена + фикс тестов (#2)
* ренейм + перенос в .env токена

* блядская хуйня надеюсь работает

* Update python-app.yml

* Update python-app.yml

* blya

* blya ya rot ibal

* бля если это из за нейминга я повешусь

* я пон

* sosat pohodu

* Update python-app.yml

* Update python-app.yml

* fdsfsd

* sadasda

* suka

* рот ебал

* Update python-app.yml

* Update python-app.yml

* ласт

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,10 +13,12 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
+  deployment:
     runs-on: ubuntu-latest
-
+    environment: 
+      name: Python enviroment
+    env: 
+      TELEGRAM_BOT_API: ${{ secrets.TELEGRAM_BOT_API }}
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.12
