--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,10 +13,8 @@ permissions:
   contents: read
 
 jobs:
-  deployment:
+  build:
     runs-on: ubuntu-latest
-    environment: 
-      name: Python enviroment
     env: 
       TELEGRAM_BOT_API: ${{ secrets.TELEGRAM_BOT_API }}
     steps:
