--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,6 +13,8 @@ permissions:
   contents: read
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
     env: 
       TELEGRAM_BOT_API: ${{ secrets.TELEGRAM_BOT_API }}
     steps:
