--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pydub==0.25.1
 pyTelegramBotAPI==4.16.1
 pytest==8.0.2
 pytest-mock==3.12.0
+python-dotenv==1.0.1
 requests==2.31.0
 telebot==0.0.5
 urllib3==2.2.1
